Add common-io dependency
Signed-off-by: kaisar <kaisar@smartitengineering.com>

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>1.4</version>
+      </dependency>
+      <dependency>
         <groupId>org.jruby</groupId>
         <artifactId>jruby-complete</artifactId>
         <version>${jruby.version}</version>
