--- a/javascript/pom.xml
+++ b/javascript/pom.xml
@@ -17,6 +17,10 @@
       <artifactId>js</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
